Invert book-parser-web to book-parser-react-ui source code dependency. Closes #6